Страници загрузки треков и плейлистов

--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -10,9 +10,10 @@
     <title>Привет, Яндекс!</title>
 </head>
 <body>
-<h1>Привет, Яндекс!</h1>
-<div class="alert alert-primary" role="alert">
-    А мы тут компонентами Bootstrap балуемся
-</div>
+    <form action="/" method="POST" enctype="multipart/form-data">
+        <input type="file" name="file">
+        <button type="submit">Загрузить</button>
+    </form>
 </body>
 </html>
+
