--- a/templates/singup_page.html
+++ b/templates/singup_page.html
@@ -38,6 +38,16 @@
     </div>
     {% endfor %}
     </p>
+    <p>
+        {{ form.town.label }}<br>
+        {{ form.town(class="form-control") }}<br>
+        {% for error in form.email.errors %}
+    <div class="alert alert-danger" role="alert">
+        {{ error }}
+    </div>
+    {% endfor %}
+    </p>
+
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
 </form>
 </body>
