--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <title>Горизонтальное меню - Snipp.ru</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='header.css') }}">
+    <script src="{{ url_for('static',filename='js/home_page.js') }}"></script>
 </head>
-<body>
+<body style="font-size: 14px; position: relative; padding: 15px 20px;">
+<header>
+<div class="menu">
+    <ul>
+        <li><a href="/homepage">Главная</a></li>
+        <li><a href="/radio">Радио</a></li>
+        <li><a href="/add/song">Добавить Трек</a></li>
+        <li><a href="/add/playlist">Добавить Плейлист</a></li>
+        <li><a href="#">Поиск</a></li>
+        <li><a href="/myplaylists">Плейлисты</a></li>
+    </ul>
+</div>
+</header>
+<div>
+    <h1>
+        Здравствуйте, {{user_name}}!
+    </h1><br>
+    <h3>
+        Вы на лучшем сайти прослушивания музыки. Почему лучшем? Не знаю.
+    </h3>
+</div>
+<br>
+<h4>10 случайных треков:</h4>
+<div>
+    {% for item in tracks %}
+    <hr size="10">
+    <h3 value="name" >{{item["track_name"]}}</h3>
+    <audio controls src="{{ url_for('static', filename=item['tack_path']) }}"></audio>
+    <br>
+    <button class="liked" value={{item["id"]}}>like</button>
+    <select name="pl" id="s1">
+        {% for item in pl %}
+        {% if item["name"] != "liked" %}
+        <option value={{item['id']}}>{{item['name']}}</option>
+        {% endif %}
+        {% endfor %}
+    </select>
+    <button class="sub" value="{{item['id']}}">sub</button>
+    {% endfor %}
 
+</div>
 </body>
 </html>
