--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -3,37 +3,42 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Горизонтальное меню - Snipp.ru</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='header.css') }}">
     <script src="{{ url_for('static',filename='js/home_page.js') }}"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body style="font-size: 14px; position: relative; padding: 15px 20px;">
-<header>
-<div class="menu">
-    <ul>
-        <li><a href="/homepage">Главная</a></li>
-        <li><a href="/radio">Радио</a></li>
-        <li><a href="/add/song">Добавить Трек</a></li>
-        <li><a href="/add/playlist">Добавить Плейлист</a></li>
-        <li><a href="#">Поиск</a></li>
-        <li><a href="/myplaylists">Плейлисты</a></li>
-    </ul>
-</div>
-</header>
+<body>
+  <div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
+        <span class="fs-4">Simple header</span>
+      </a>
+
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="/homepage" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="/radio" class="nav-link">Radio</a></li>
+        <li class="nav-item"><a href="/add/song" class="nav-link">Add Song</a></li>
+        <li class="nav-item"><a href="/add/playlist" class="nav-link">Add Playlist</a></li>
+        <li class="nav-item"><a href="/myplaylists" class="nav-link">Playlists</a></li>
+      </ul>
+    </header>
+  </div>
 <div>
     <h1>
         Здравствуйте, {{user_name}}!
     </h1><br>
-    <h3>
+    <h4>
         Вы на лучшем сайти прослушивания музыки. Почему лучшем? Не знаю.
-    </h3>
+    </h4>
 </div>
 <br>
-<h4>10 случайных треков:</h4>
+<h5>10 случайных треков:</h5>
 <div>
     {% for item in tracks %}
-    <hr size="10">
-    <h3 value="name" >{{item["track_name"]}}</h3>
-    <audio controls src="{{ url_for('static', filename=item['tack_path']) }}"></audio>
+    <hr size="3">
+    <h3 value="name" >{{item["track_name"]}}</h3><br>
+    <img src="{{ url_for('static',filename=item['img_path']) }}", width="100", height="100"></img><br>
+    <audio controls src="{{ url_for('static', filename=item['tack_path']) }}" ></audio>
     <br>
     <button class="liked" value={{item["id"]}}>like</button>
     <select name="pl" id="s1">
@@ -46,6 +51,17 @@
     <button class="sub" value="{{item['id']}}">sub</button>
     {% endfor %}
 
+</div>
+<div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/homepage" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+        <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
+      </a>
+      <span class="text-muted">&copy; Оооочень суриёзные люди из Я.лицея </span>
+    </div>
+
+  </footer>
 </div>
 </body>
 </html>
