--- a/templates/my_playlists.html
+++ b/templates/my_playlists.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='header.css') }}">
-     <script src="{{ url_for('static',filename='js/mu_playlists.js') }}"></script>
+   <script src="{{ url_for('static',filename='js/mu_playlists.js') }}"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body style="font-size: 14px; position: relative; padding: 15px 20px;">
-<header>
-<div class="menu">
-    <ul>
-        <li><a href="/homepage">Главная</a></li>
-        <li><a href="/radio">Радио</a></li>
-        <li><a href="/add/song">Добавить Трек</a></li>
-        <li><a href="/add/playlist">Добавить Плейлист</a></li>
-        <li><a href="#">Поиск</a></li>
-        <li><a href="/myplaylists">Плейлисты</a></li>
-    </ul>
-</div>
-</header>
+<body>
+  <div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <a href="/homepage" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
+        <span class="fs-4">Simple header</span>
+      </a>
+
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="/homepage" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="/radio" class="nav-link">Radio</a></li>
+        <li class="nav-item"><a href="/add/song" class="nav-link">Add Song</a></li>
+        <li class="nav-item"><a href="/add/playlist" class="nav-link">Add Playlist</a></li>
+        <li class="nav-item"><a href="/myplaylists" class="nav-link">Playlists</a></li>
+      </ul>
+    </header>
+  </div>
 {% for item in pl %}
 <div>
     <hr>
