--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title></title>
-  <script src="{{ url_for('static',filename='js/top.js') }}"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <script src="{{ url_for('static',filename='js/playlist.js') }}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
   <div class="container">
@@ -24,32 +24,32 @@
     </header>
   </div>
 <div>
-  <img src={{img_path}} width="5%" id="track_img"/>
+  <img src={{url_for('static',filename=img_path)}} width="8%" id="track_img"/><br>
+  <h2>{{pl_name}}</h2><br>
+  <h4>{{pl_description}}</h4>
   <p id="name">{{name}}</p>
 </div>
-<audio id="audio" src="{{first_track }}"></audio>
+<audio id="audio" src="{{ url_for('static',filename=first_track) }}"></audio>
 <div id="controls">
   <div class="audio-track">
     <div class="time"></div>
 
   </div>
-
-  <button class="play">Play</button>
+  <button class="play" value={{playlist_id}}>Play</button>
   <button class="pause">Pause</button>
   <button class="next">next&#62;</button>
-  <button class="like">like</button>
-  <br>
-  <select name="pl" id="s1">
-    {% for item in pl %}
-    {% if item["name"] != "liked" %}
-    <option value={{item['id']}}>{{item['name']}}</option>
+</div>
+<div>
+    {% for item in tracks %}
+    <hr size="2">
+    <h3 value="name" >{{item["track_name"]}}</h3>
+    <audio controls src="{{ url_for('static', filename=item['tack_path']) }}"></audio>
+    <br>
+    {% if is_pl_my %}
+    <button class="delete" value="{{item['id']}}">Удалить плейлист</button>
     {% endif %}
     {% endfor %}
-  </select><br>
-  <button class="sub">sub</button>
+
 </div>
-
-
-</form>
 </body>
 </html>
