--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,5 +38,16 @@
     <br>
     <button class="delete" value="{{item['id']}}">Удалить трек</button>
     {% endfor %}
+<div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/homepage" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+        <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
+      </a>
+      <span class="text-muted">&copy; Оооочень суриёзные люди из Я.лицея </span>
+    </div>
+
+  </footer>
+</div>
 </body>
 </html>
