--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,6 +23,9 @@
       </ul>
     </header>
  </div>
+
+ <h5>email сейчас:</h5>
+ <h5>{{email}}</h5>
  <form action="" method="post">
 
      <label for="username">Новый email</label>
