--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -20,6 +20,7 @@
         <li class="nav-item"><a href="/add/song" class="nav-link">Add Song</a></li>
         <li class="nav-item"><a href="/add/playlist" class="nav-link">Add Playlist</a></li>
         <li class="nav-item"><a href="/myplaylists" class="nav-link">Playlists</a></li>
+          <li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
       </ul>
     </header>
   </div>
