--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,7 +23,6 @@
       </ul>
     </header>
  </div>
-
  <h5>email сейчас:</h5>
  <h5>{{email}}</h5>
  <form action="" method="post">
@@ -41,6 +40,9 @@
     <br>
     <button class="delete" value="{{item['id']}}">Удалить трек</button>
     {% endfor %}
+ <h6>Темп :{{temp}}</h6>
+ <h6>Нвстроение :{{mood}}</h6>
+
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
