--- a/static/index.css
+++ b/static/index.css
@@ -2,10 +2,9 @@ html, body {
     height: 100%;
 }
 html {
-
     display: table;
     margin: auto;
-    background-color: salmon;
+    background-color: #212529;
 }
 body {
 
@@ -13,3 +12,6 @@ body {
     vertical-align: middle;
 }
 
+h3 {
+	color: #ffffff;
+}
