--- a/templates/add_track.html
+++ b/templates/add_track.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Добавление трека</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
+<body class=" text-center text-white bg-dark">
   <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="/homepage" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-        <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
-        <span class="fs-4">Simple header</span>
-      </a>
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+            <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
+            <span class="fs-3">Wolves Exist</span>
+        </a>
 
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="/homepage" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="/radio" class="nav-link">Radio</a></li>
-        <li class="nav-item"><a href="/add/song" class="nav-link">Add Song</a></li>
-        <li class="nav-item"><a href="/add/playlist" class="nav-link">Add Playlist</a></li>
-        <li class="nav-item"><a href="/myplaylists" class="nav-link">Playlists</a></li>
-      </ul>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="/homepage" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="/radio" class="nav-link">Radio</a></li>
+            <li class="nav-item"><a href="/add/song" class="nav-link">Add Song</a></li>
+            <li class="nav-item"><a href="/add/playlist" class="nav-link">Add Playlist</a></li>
+            <li class="nav-item"><a href="/myplaylists" class="nav-link">Playlists</a></li>
+            <li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
+            <li class="nav-item"><a href="/search" class="nav-link">Search</a></li>
+        </ul>
     </header>
   </div>
     <form method="post" novalidate enctype="multipart/form-data">
@@ -33,7 +35,8 @@
                 {% for error in field.errors %}
                     <div class="error">{{ error }}</div>
                 {% endfor %}
-            </div>
+
+            </div><br>
         {% endfor %}
     </form>
 <div class="container">
