--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -2,28 +2,30 @@
 <html lang="ru">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Горизонтальное меню - Snipp.ru</title>
+    <title>Главная</title>
     <script src="{{ url_for('static',filename='js/home_page.js') }}"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
+<body class="  text-white bg-dark">
   <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-        <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
-        <span class="fs-4">Simple header</span>
-      </a>
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+            <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
+            <span class="fs-3">Wolves Exist</span>
+        </a>
 
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="/homepage" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="/radio" class="nav-link">Radio</a></li>
-        <li class="nav-item"><a href="/add/song" class="nav-link">Add Song</a></li>
-        <li class="nav-item"><a href="/add/playlist" class="nav-link">Add Playlist</a></li>
-        <li class="nav-item"><a href="/myplaylists" class="nav-link">Playlists</a></li>
-          <li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
-      </ul>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="/homepage" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="/radio" class="nav-link">Radio</a></li>
+            <li class="nav-item"><a href="/add/song" class="nav-link">Add Song</a></li>
+            <li class="nav-item"><a href="/add/playlist" class="nav-link">Add Playlist</a></li>
+            <li class="nav-item"><a href="/myplaylists" class="nav-link">Playlists</a></li>
+            <li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
+            <li class="nav-item"><a href="/search" class="nav-link">Search</a></li>
+        </ul>
     </header>
-  </div>
+</div>
 <div>
     <h1>
         Здравствуйте, {{user_name}}!
@@ -33,36 +35,36 @@
     </h4>
 </div>
 <br>
-<h5>10 случайных треков:</h5>
-<div>
-    {% for item in tracks %}
-    <hr size="3">
-    <h3 value="name" >{{item["track_name"]}}</h3><br>
-    <img src="{{ url_for('static',filename=item['img_path']) }}", width="100", height="100"></img><br>
-    <audio controls src="{{ url_for('static', filename=item['tack_path']) }}" ></audio>
-    <br>
-    <button class="liked" value={{item["id"]}}>like</button>
+<h4>10 случайных треков:</h4><br>
+<h6>Добавить в </h6>
     <select name="pl" id="s1">
-        {% for item in pl %}
-        {% if item["name"] != "liked" %}
-        <option value={{item['id']}}>{{item['name']}}</option>
+        {% for items in pl %}
+        {% if items["name"] != "liked" and items["name"] != "disliked" %}
+        <option value={{items['id']}}>{{items['name']}}</option>
         {% endif %}
         {% endfor %}
     </select>
+<div>
+    {% for item in tracks %}
+    <hr size="3">
+    <h3 value="name">{{item["track_name"]}}</h3><br>
+    <img src="{{ url_for('static',filename=item['img_path']) }}" , width="100" , height="100"></img><br>
+    <audio controls src="{{ url_for('static', filename=item['tack_path']) }}"></audio>
+    <br>
+    <button class="liked" value={{item["id"]}}>like</button>
     <button class="sub" value="{{item['id']}}">sub</button>
     {% endfor %}
-
 </div>
 <div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <a href="/homepage" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-        <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
-      </a>
-      <span class="text-muted">&copy; Оооочень суриёзные люди из Я.лицея </span>
-    </div>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/homepage" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
+            </a>
+            <span class="text-muted">&copy; Оооочень суриёзные люди из Я.лицея </span>
+        </div>
 
-  </footer>
+    </footer>
 </div>
 </body>
 </html>
