--- a/templates/search_music.html
+++ b/templates/search_music.html
@@ -2,16 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Поиск</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
+<body class=" text-center text-white bg-dark">
+  <div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+            <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
+            <span class="fs-3">Wolves Exist</span>
+        </a>
+
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="/homepage" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="/radio" class="nav-link">Radio</a></li>
+            <li class="nav-item"><a href="/add/song" class="nav-link">Add Song</a></li>
+            <li class="nav-item"><a href="/add/playlist" class="nav-link">Add Playlist</a></li>
+            <li class="nav-item"><a href="/myplaylists" class="nav-link">Playlists</a></li>
+            <li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
+            <li class="nav-item"><a href="/search" class="nav-link">Search</a></li>
+        </ul>
+    </header>
+  </div>
 <form method="post" novalidate enctype="multipart/form-data">
     <div>
         {{ form.csrf_token }}
     </div>
     {% for field in form if field.name != 'csrf_token' %}
     <div>
-        {{ field.label() }}
         {{ field() }}
         {% for error in field.errors %}
         <div class="error">{{ error }}</div>
@@ -19,4 +37,16 @@
     </div>
     {% endfor %}
 </form>
+<div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/homepage" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+        <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
+      </a>
+      <span class="text-muted">&copy; Оооочень суриёзные люди из Я.лицея </span>
+    </div>
+
+  </footer>
+</div>
 </body>
+</html>
