--- a/templates/show_music.html
+++ b/templates/show_music.html
@@ -1,18 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Title</title>
+    <meta charset="UTF-8">
+    <title>Результат</title>
+    <script src="{{ url_for('static',filename='js/show_tracks.js') }}"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
+<body class=" text-white bg-dark">
+  <div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+            <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
+            <span class="fs-3">Wolves Exist</span>
+        </a>
+
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="/homepage" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="/radio" class="nav-link">Radio</a></li>
+            <li class="nav-item"><a href="/add/song" class="nav-link">Add Song</a></li>
+            <li class="nav-item"><a href="/add/playlist" class="nav-link">Add Playlist</a></li>
+            <li class="nav-item"><a href="/myplaylists" class="nav-link">Playlists</a></li>
+            <li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
+            <li class="nav-item"><a href="/search" class="nav-link">Search</a></li>
+        </ul>
+    </header>
+  </div>
 <form method="POST" novalidate enctype="multipart/form-data">
     <div>
         {{ form.csrf_token }}
     </div>
     <h1>Поиск песни: {{ music_name }}</h1>
-    {% for name in music_list %}
-    <button type="submit" formaction="{{name}}">{{name}}</button>
+    <h6>Добавить в </h6>
+    <select name="pl" id="s1">
+        {% for items in pl %}
+        {% if items["name"] != "liked" and items["name"] != "disliked" %}
+        <option value={{items['id']}}>{{items['name']}}</option>
+        {% endif %}
+        {% endfor %}
+    </select>
+    {% for item in music %}
+    <hr size="3">
+    <h3 value="name">{{item["track_name"]}}</h3><br>
+    <img src="{{ url_for('static',filename=item['img_path']) }}" , width="100" , height="100"></img><br>
+    <audio controls src="{{ url_for('static', filename=item['tack_path']) }}"></audio>
+    <br>
+    <button class="liked" value={{item["id"]}}>like</button>
+    <button class="sub" value="{{item['id']}}">sub</button>
     {% endfor %}
 </form>
+<div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/homepage" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+        <img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
+      </a>
+      <span class="text-muted">&copy; Оооочень суриёзные люди из Я.лицея </span>
+    </div>
+
+  </footer>
+</div>
 </body>
 </html>
