--- a/templates/singin_page.html
+++ b/templates/singin_page.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Привет, Яндекс!</title>
+    <title>Вход</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='index.css') }}">
 
 </head>
 <body>
-
+<img src="{{ url_for('static',filename='icons/icon_m.svg') }}"></img>
 <h3>Авторизация</h3>
 
 <form action="" method="post" novalidate>
 
     {{ form.hidden_tag() }}
     <p>
-        {{ form.email.label }}<br>
+        <h3>{{ form.email.label }}</h3><br>
         {{ form.email(class="form-control") }}<br>
         {% for error in form.email.errors %}
     <div class="alert alert-danger" role="alert">
@@ -22,7 +22,7 @@
     </div>
     {% endfor %}
     <p class="cite">
-        {{ form.password.label }}<br>
+    <h3>{{ form.password.label }}</h3><br>
         {{ form.password(class="form-control", type="password") }}<br>
         {% for error in form.password.errors %}
     <div class="alert alert-danger" role="alert">
