--- a/templates/my_playlists.html
+++ b/templates/my_playlists.html
@@ -22,6 +22,7 @@
             <li class="nav-item"><a href="/myplaylists" class="nav-link">Playlists</a></li>
             <li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
             <li class="nav-item"><a href="/search" class="nav-link">Search</a></li>
+            <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
         </ul>
     </header>
   </div>
